I fixed the problem with turning on the horizontal scroll bar

--- a/react-job-app/src/styles/appfunctionality.css
+++ b/react-job-app/src/styles/appfunctionality.css
@@ -166,7 +166,7 @@
 	}
 
 	.main__content .main__content-item--wide h3 {
-		max-width: 91vw;
+		max-width: 94vw;
 		margin-top: 0%;
 	}
 	
@@ -217,6 +217,10 @@
 		margin-left: 5.4px;
 		margin-top: 5.4px;
 	}
+
+	.main__content .main__content-item--wide h3 {
+		max-width: 96.4vw;
+	}
 }
 
 @media screen and (max-width: 450px) {
@@ -254,5 +258,9 @@
 	.main__content-item-radios label .circle::before{
 		margin-left: 4.8px;
 		margin-top: 4.6px;
+	}
+
+	.main__content .main__content-item--wide h3 {
+		max-width: 97.4vw;
 	}
 }
