--- a/react-job-app/src/styles/header.css
+++ b/react-job-app/src/styles/header.css
@@ -4,7 +4,7 @@
  display: flex;
  align-items: center;
  justify-content: space-between;
- padding: 1.5vh 3vh;
+ padding: 1.5vh 3vw;
  background-color: #100c14;
  z-index: 1000;
  position: sticky;
@@ -100,7 +100,7 @@
  }
 
  .header {
-  padding: 1.5vh 1.8vh;
+  padding: 1.5vh 1.8vw;
  }
 
 }
@@ -120,7 +120,7 @@
  }
 
  .header {
-  padding: 1.5vh 1.3vh;;
+  padding: 1.5vh 1.3vw;;
  }
 }
 
